# rinha2025-haskell

./: .env  .env.prd  .env.qa  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  docker-compose.yaml  nginx.conf  nginx.conf.qa  rinha2025-haskell.cabal
app/: Main.hs
libpq/: install-libpq.sh
qa/: default.nix  processor_container_network.nix  wired.nginx.nix  wired.nix  wired.postgresql.nix
scripts/: env_replacement.sh
src/Pagamento/ApiLib/: Api.hs  ApiType.hs  ListarPagamentos.hs  ObterPagamentoPorId.hs  Pagar.hs  ReceberTrabalho.hs  RevisarAgendamentos.hs
src/Pagamento/CallerLib/: Caller.hs
src/Pagamento/InternalCallerLib/: InternalCaller.hs
src/Pagamento/RepositoryLib/: FinalizarPagamento.hs
src/Pagamento/ViewModelsLib/: AnyMessageVM.hs  AppSettingsVM.hs  Constants.hs  PaymentSyncVM.hs  PaymentVM.hs  PaymentsSummaryVM.hs  PlanVM.hs  Processor.hs  ServiceHealthVM.hs
src/RepositoryLib/: PGLOG.sql  Repository.hs  START.sql  VERSION_MANAGER.sql
